el boton modifica imagen

--- a/ejercicioGit/ejercicio.html
+++ b/ejercicioGit/ejercicio.html
@@ -5,5 +5,6 @@
     </header>
     <body>
         <input type="button" value="Pres Me" onclick="saludar();"/>   
+        <img src="./imagenes/mininos.gif" width="200px" id="img1"/>
     </body>
 </html>
