Recuperar int float

--- a/utilitarios/saludos.html
+++ b/utilitarios/saludos.html
@@ -11,7 +11,13 @@
 
     <H3> Ingreso su apellido</H3>
     <input type="text" id="txtApellido" />
-    
+
+    <H3> Ingrese su edad </H3>
+    <input type="text" id="txtEdad" />
+
+    <H3> Ingreso su estatura</H3>
+    <input type="text" id="txtEstatura" />
+
     <input type="button" value="SALUDAR" onclick="saludar();" />
 </body>
 
