--- a/utilitarios/saludos.html
+++ b/utilitarios/saludos.html
@@ -18,7 +18,13 @@
     <H3> Ingreso su estatura</H3>
     <input type="text" id="txtEstatura" />
 
+    <img width=200px id="idImage"/>
+
     <input type="button" value="SALUDAR" onclick="saludar();" />
+
+    <h3>Resultado</h3>
+    <h3 id="lblResultado"></h3>
+
 </body>
 
 </html>
