--- a/puntoDeVenta.html
+++ b/puntoDeVenta.html
@@ -28,6 +28,8 @@
 
         <input type="button" value="CALCULAR TOTAL" 
         onclick="calcularValorTotal()"/>
+        <input type="button" value="LIMPIAR" 
+        onclick="limpiar()"/>
     
     </body> 
 </html>
