Funcion imprimer texto Dados

--- a/DadosArchivos/dados.html
+++ b/DadosArchivos/dados.html
@@ -4,6 +4,7 @@
 <head>
     <link href="dados.css" rel="stylesheet" />
     <script src="dados.js"></script>
+        <script src="utilitarios.js"></script>
 </head>
 
 <body>
