--- a/DadosArchivos/dados.html
+++ b/DadosArchivos/dados.html
@@ -11,7 +11,10 @@
     <div class="principal">
         <div class="espacio"></div>
         <div class="imagen">
-            <h1 id="lblNumero">?</h1>
+            <h1 id="lblNumero">?</h1>            
+        </div>
+        <div class="imagen">            
+            <h1 id="lblResultado">?</h1>
         </div>
         <div class="botones">
             <input type="button" value="JUGAR" class="estiloBoton"  onclick="jugar();" />
