Punto de Venta 2

--- a/puntoDeVentaV2/puntoDeVenta.html
+++ b/puntoDeVentaV2/puntoDeVenta.html
@@ -1,36 +1,117 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <script src="utilitarios.js"></script>
-        <script src="serviciosPuntoDeVenta.js"></script>
-        <script src="puntoDeVenta.js"></script>
-    </head>
-    <body>
-        <h3>Ingrese el nombre del producto</h3>
-        <input type="text" id="txtProducto"/>
-        <h3>Ingrese la cantidad a comprar</h3>
-        <input type="text" id="txtCantidad"/>
-        <h3>Ingrese el precio del producto</h3>
-        <input type="text" id="txtPrecio"/>
-        <h3>Ingrese el porcentaje de descuento</h3>
-        <input type="text" id="txtPorcentajeDescuento"/>
-        <h3>Subtotal</h3>
-        <h3 id="lblSubtotal">0.0</h3>
-        <h3>Descuento</h3>
-        <h3 id="lblDescuento">0.0</h3>
-        <h3>IVA 12%</h3>
-        <h3 id="lblValorIVA">0.0</h3>
-        <h3>Total</h3>
-        <h3 id="lblTotal">0.0</h3>
 
-        <h3>Resumen</h3>
-        <h3 id="lblResumen"></h3>
+<head>
+    <link rel="stylesheet" href="notas.css" />
+    <script src="utilitarios.js"></script>
+    <script src="serviciosPuntoDeVenta.js"></script>
+    <script src="puntoDeVenta.js"></script>
+</head>
 
-        <input type="button" value="CALCULAR TOTAL" 
-        onclick="calcularValorTotal()"/>
-        <input type="button" value="LIMPIAR" 
-        onclick="limpiar()"/>
-    
-    </body> 
+<body>
+    <div class="principal">
+        <div class="logoEscuela">
+            <img src="./imagenes/logoKrakeDev.png" width="80%" />
+        </div>
+
+
+        <div class="contenido">
+            <div class="titulo">
+                PUNTO DE VENTA
+            </div>
+            <div class="titulo">
+            </div>
+
+            <div class="ingresoDatos">
+                <div class="tituloCampo">
+                    PRODUCTO
+                </div>
+                <div>
+                    <input type="text" class="cajaTexto" id="txtProducto" />
+                    <div class="error" id="lblErrortxtProducto"></div>
+                </div>
+            </div>
+            <div class="ingresoDatos">
+                <div class="tituloCampo">
+                    CANTIDAD
+                </div>
+                <div>
+                    <input type="text" class="cajaTexto" id="txtCantidad" />
+                    <div class="error" id="lblErrortxtCantidad"></div>
+                </div>
+            </div>
+
+            <div class="ingresoDatos">
+                <div class="tituloCampo">
+                    PRECIO
+                </div>
+                <div>
+                    <input type="text" class="cajaTexto" id="txtPrecio" />
+                    <div class="error" id="lblErrortxtPrecio"></div>
+                </div>
+            </div>
+
+
+            <div class="botones">
+                <div class="contenedorBoton">
+                    <input type="button" value="CALCULAR TOTAL" class="estiloBoton"
+                        onclick="calcularValorTotal();" />&nbsp;
+                    <input type="button" value="LIMPIAR" class="estiloBoton" onclick="limpiar();" />
+                </div>
+            </div>
+
+        </div>
+
+        <div class="areaResultado">
+
+            <div class="resultado">
+                <div>
+                </div>
+                <div id="lbl">
+                </div>
+            </div>
+
+            <div class="resultado">
+                <div>
+                    Subtotal:
+                </div>
+                <div id="lblSubtotal">
+                    0.0
+                </div>
+            </div>
+
+            <div class="resultado">
+                <div>
+                    Descuento:
+                </div>
+                <div id="lblDescuento">
+                    0.0
+                </div>
+            </div>
+
+            <div class="resultado">
+                <div>
+                    IVA 12%:
+                </div>
+                <div id="lblValorIVA">
+                    0.0
+                </div>
+            </div>
+
+            <div class="resultado">
+                <div>
+                    Total:
+                </div>
+                <div id="lblTotal">
+                    0.0
+                </div>
+
+            </div>
+
+
+        </div>
+
+    </div>
+</body>
+
 </html>
-
