Placas tipo vehiculo

--- a/placas/placas.html
+++ b/placas/placas.html
@@ -47,7 +47,7 @@
 
             <div class="resultado">
                 <div>
-                    Validación: 
+                    Validación:
                 </div>
                 <div id="lblPlaca">
                     SIN VALIDACION
@@ -56,9 +56,27 @@
 
             <div class="resultado">
                 <div>
-                    Errores: 
+                    Errores:
                 </div>
                 <div id="lblErrores">
+                    N/A
+                </div>
+            </div>
+
+            <div class="resultado">
+                <div>
+                    Provincia:
+                </div>
+                <div id="lblProvincia">
+                    N/A
+                </div>
+            </div>
+
+            <div class="resultado">
+                <div>
+                    Tipo:
+                </div>
+                <div id="lblTipo">
                     N/A
                 </div>
             </div>
