Placas pico y placa - final

--- a/placas/placas.html
+++ b/placas/placas.html
@@ -81,6 +81,15 @@
                 </div>
             </div>
 
+            <div class="resultado">
+                <div>
+                    Dia Pico y Placa:
+                </div>
+                <div id="lblDiaPico">
+                    N/A
+                </div>
+            </div>
+
         </div>
 
     </div>
