--- a/juego/juego.html
+++ b/juego/juego.html
@@ -2,42 +2,55 @@
 <html>
 
 <head>
-    <link rel="stylesheet" href="placas.css" />
+    <link rel="stylesheet" href="juego.css" />
     <script src="utilitarios.js"></script>
-    <script src="utilitariosCadenas.js"></script>
-    <script src="serviciosPlacas.js"></script>
-    <script src="placas.js"></script>
+    <script src="serviciosJuego.js"></script>
+    <script src="juego.js"></script>
 </head>
 
 <body>
     <div class="principal">
-        <div class="logoEscuela">
-            <img src="./imagenes/logoKrakeDev.png" width="80%" />
-        </div>
-
 
         <div class="contenido">
             <div class="titulo">
-                VALIDADOR DE PLACAS
-            </div>
-            <div class="titulo">
+                JUEGA PIEDRA PAPEL O TIJERA
             </div>
 
-            <div class="ingresoDatos">
+
+
+
+            <div class="titulo">
+                Selecciona una imagen
+
+                <div class="imagen">
+                    <img src="./imagenes/piedra.png" width="40%" onclick="jugar('Piedra');" />
+                </div>
+                <div class="imagen">
+                    <img src="./imagenes/papel.png" width="40%" onclick="jugar('Papel');" />
+                </div>
+                <div class="imagen">
+                    <img src="./imagenes/tijera.png" width="40%" onclick="jugar('Tijera');" />
+                </div>
+            </div>
+            <div class="titulo">
+                Selección del Computador
+                <div class="imagen">
+                    <img src="./imagenes/notas.png" width="15%" id="lblimgNoImagen" />
+                </div>
+            </div>
+
+            <div class="texto">
                 <div class="tituloCampo">
-                    INGRESE LA PLACA
+                    QUIEN GANO LA PARTIDA
                 </div>
                 <div>
-                    <input type="text" class="cajaTexto" id="txtPlaca" />
-                    <div class="error" id="lbltxtPlacaCorrecta"></div>
-                    <div class="error" id="lbltxtPlacaErrores"></div>
+                    <div class="error" id="lblquiengano"></div>
                 </div>
             </div>
 
             <div class="botones">
                 <div class="contenedorBoton">
-                    <input type="button" value="VALIDAR" class="estiloBoton" onclick="validarPlaca();" />&nbsp;
-                    <input type="button" value="LIMPIAR" class="estiloBoton" onclick="limpiar();" />
+                    <input type="button" value="NUEVA PARTIDA" class="estiloBoton" onclick="limpiar();" />
                 </div>
             </div>
 
@@ -47,53 +60,34 @@
 
             <div class="resultado">
                 <div>
-                    Validación:
+                    Usuario:
                 </div>
-                <div id="lblPlaca">
-                    SIN VALIDACION
-                </div>
-            </div>
-
-            <div class="resultado">
-                <div>
-                    Errores:
-                </div>
-                <div id="lblErrores">
-                    N/A
+                <div id="lblUsuario">
+                    0
                 </div>
             </div>
 
             <div class="resultado">
                 <div>
-                    Provincia:
+                    Computador:
                 </div>
-                <div id="lblProvincia">
-                    N/A
-                </div>
-            </div>
-
-            <div class="resultado">
-                <div>
-                    Tipo:
-                </div>
-                <div id="lblTipo">
-                    N/A
+                <div id="lblComputador">
+                    0
                 </div>
             </div>
 
             <div class="resultado">
                 <div>
-                    Dia Pico y Placa:
+                    Partida:
                 </div>
-                <div id="lblDiaPico">
-                    N/A
+                <div id="lblPartida">
+                    0
                 </div>
             </div>
 
         </div>
 
     </div>
-
 
 </body>
 
